--- a/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
+++ b/src/app/modules/loan/cl-loan-witness/cl-loan-witness.component.html
@@ -123,12 +123,12 @@
                                     </td>
                                     <td>
                                         <div class="flex">
-                                            <button  type="button" class=" mr-3 flex font-bold"
+                                            <button  type="button" class=" mr-3 flex font-bold items-center	"
                                                  color="primary" (click)="onSavePersonalSuretiesForm()">
                                                 <mat-icon class=" text-2xl text-green">save</mat-icon>
                                                 Save
                                             </button>
-                                            <button  type="button" class="flex  font-bold"
+                                            <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary" (click)="onClearLoanSuretiesForm()">
                                                 <mat-icon class=" text-2xl text-red-500">cancel</mat-icon>
                                                 Cancel
@@ -178,7 +178,7 @@
 
 
                                                 <td>
-                                                    <button  type="button" class="flex  font-bold"
+                                                    <button  type="button" class="flex  font-bold  items-center"
                                                         color="primary" (click)="onEditPersonalSureties(loan)">
                                                         <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
                                                         Edit
@@ -254,12 +254,12 @@
                                         
                                         
                                         <div class="flex">
-                                            <button  type="button" class=" mr-3 flex  font-bold"
+                                            <button  type="button" class=" mr-3 flex  font-bold  items-center"
                                                  color="primary" (click)="onSaveCorporateSuretiesForm()">
                                                 <mat-icon class=" text-2xl text-green">save</mat-icon>
                                                 Save
                                             </button>
-                                            <button  type="button" class="flex  font-bold"
+                                            <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary" (click)="onClearCorporateSuretiesForm()">
                                                 <mat-icon class=" text-2xl text-red-500">cancel</mat-icon>
                                                 Cancel
@@ -293,7 +293,7 @@
 
 
                                                 <td>
-                                                    <button  type="button" class="flex  font-bold"
+                                                    <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary" (click)="onEditLoanCorporateSuretyArray(loan)">
                                                     <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
                                                     Edit
@@ -396,12 +396,12 @@
                                     <td>
                                         
                                         <div class="flex">
-                                            <button  type="button" class=" mr-3 flex  font-bold"
+                                            <button  type="button" class=" mr-3 flex  font-bold  items-center"
                                                  color="primary" (click)="onSaveLoanRefrencesForm()">
                                                 <mat-icon class=" text-2xl text-green">save</mat-icon>
                                                 Save
                                             </button>
-                                            <button  type="button" class="flex  font-bold"
+                                            <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary" (click)="onClearLoanRefrencesForm()">
                                                 <mat-icon class=" text-2xl text-red-500">cancel</mat-icon>
                                                 Cancel
@@ -445,7 +445,7 @@
 
 
                                                 <td>
-                                                    <button  type="button" class="flex  font-bold"
+                                                    <button  type="button" class="flex  font-bold  items-center"
                                                         color="primary" (click)="onEditRefrence(loan)">
                                                         <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
                                                         Edit
@@ -518,12 +518,12 @@
                                     <td>
                                         
                                         <div class="flex">
-                                            <button  type="button" class=" mr-3 flex  font-bold"
+                                            <button  type="button" class=" mr-3 flex  font-bold  items-center"
                                                  color="primary" (click)="onSaveLoanWitnessForm()">
                                                 <mat-icon class=" text-2xl text-green">save</mat-icon>
                                                 Save
                                             </button>
-                                            <button  type="button" class="flex  font-bold"
+                                            <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary" (click)="onClearLoanWitnessForm()">
                                                 <mat-icon class="text-2xl text-red-500">cancel</mat-icon>
                                                 Cancel
@@ -558,7 +558,7 @@
 
                                                 <td>
                                                     
-                                                    <button  type="button" class="flex  font-bold"
+                                                    <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary" (click)="onEditLoanWitnessArray(loan)">
                                                     <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
                                                     Edit
@@ -641,12 +641,12 @@
                                     <td>
 
                                         <div class="flex">
-                                            <button  type="button" class=" mr-3 flex  font-bold"
+                                            <button  type="button" class=" mr-3 flex  font-bold  items-center"
                                                  color="primary" (click)="onSaveLoanPastPaidForm()">
                                                 <mat-icon class=" text-2xl text-green">save</mat-icon>
                                                 Save
                                             </button>
-                                            <button  type="button" class="flex  font-bold"
+                                            <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary"  (click)="onClearLoanPastPaidForm()">
                                                 <mat-icon class=" text-2xl text-red-500">cancel</mat-icon>
                                                 Cancel
@@ -686,7 +686,7 @@
 
                                                 <td>
                                                     
-                                                    <button  type="button" class="flex  font-bold"
+                                                    <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary"  (click)="onEditLoanPastPaidArray(loan)">
                                                     <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
                                                     Edit
@@ -825,12 +825,12 @@
                                     <td>
 
                                         <div class="flex">
-                                            <button  type="button" class=" mr-3 flex  font-bold"
+                                            <button  type="button" class=" mr-3 flex  font-bold  items-center"
                                                  color="primary" (click)="onSaveCurrentLoansForm()">
                                                 <mat-icon class=" text-2xl text-green">save</mat-icon>
                                                 Save
                                             </button>
-                                            <button  type="button" class="flex  font-bold"
+                                            <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary"  (click)="onClearCurrentLoansForm()">
                                                 <mat-icon class=" text-2xl text-red-500">cancel</mat-icon>
                                                 Cancel
@@ -876,7 +876,7 @@
 
 
                                                 <td>
-                                                    <button  type="button" class="flex  font-bold"
+                                                    <button  type="button" class="flex  font-bold  items-center"
                                                     color="primary"  (click)="onEditLoanCurrentList(loan)">
                                                     <mat-icon class=" text-xl text-gray-500">edit</mat-icon>
                                                     Edit
