--- a/src/app/modules/reports/customer-cwr/customer-cwr.component.html
+++ b/src/app/modules/reports/customer-cwr/customer-cwr.component.html
@@ -184,13 +184,20 @@
                 </ng-container>
 
                 <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef
-                    >Action
-                    </mat-header-cell
-                    >
-                    <mat-cell *matCellDef="let report">{{
-                        report.Occuptaion
-                                    }}</mat-cell>
+                    <mat-header-cell  *matHeaderCellDef>Actions</mat-header-cell>
+                    <mat-cell mat-cell *matCellDef="let report">
+                        <div class="flex" style="flex-wrap:wrap; width: 220px;">
+                            <button
+                                mat-icon-button
+                                (click)="downloadCusCwr(report)"
+                            >
+                                <mat-icon  class="text-green" title="download" color="primary"
+                                >file_download
+                                </mat-icon
+                                >
+                            </button>
+                        </div>
+                    </mat-cell>
                 </ng-container>
 
                 <mat-header-row
