--- a/src/app/modules/reports/reports/reports.component.html
+++ b/src/app/modules/reports/reports/reports.component.html
@@ -360,6 +360,20 @@
             </mat-card>
         </div>
 
+<!--        <div class="col-lg-4 col-sm-12">-->
+<!--            <mat-card routerLink="gl-move" class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg" id="llcInquiryText">-->
+
+<!--                <div class="d-grid" style="justify-items: center;">-->
+<!--                    <img src="../../../../assets/images/reports.png" class="img-responsive center-block w-12 mx-auto mb-3">-->
+
+
+<!--                    <p class=" text-black"-->
+<!--                    >GL Move</p>-->
+<!--                </div>-->
+
+<!--            </mat-card>-->
+<!--        </div>-->
+
     </div>
 
 </div>
