--- a/src/app/modules/notification/notification-page/notification-page.component.html
+++ b/src/app/modules/notification/notification-page/notification-page.component.html
@@ -19,15 +19,27 @@
     </div>
 
     <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
-        <div class="col-lg-4 col-sm-12">
-            <mat-card  class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText" >
-                <count [count]="nRcn" *ngIf="nRcn  != undefined"></count>
-                <div class="d-grid" style="justify-items: center;">
-<!--                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>-->
-                    <img src="../../../../assets/images/ic_recovery_collection_notification.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
+<!--        <div class="col-lg-4 col-sm-12">-->
+<!--            <mat-card  class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"-->
+<!--                      id="llcInquiryText" >-->
+<!--                <count [count]="nRcn" *ngIf="nRcn  != undefined"></count>-->
+<!--                <div class="d-grid" style="justify-items: center;">-->
+<!--&lt;!&ndash;                    <mat-icon class="mb-2 text-green">file_copy</mat-icon>&ndash;&gt;-->
+<!--                    <img src="../../../../assets/images/ic_recovery_collection_notification.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>-->
 
-                    <p class=" text-black">Recovery Collection Notifications</p>
+<!--                    <p class=" text-black">Recovery Collection Notifications</p>-->
+<!--                </div>-->
+<!--            </mat-card>-->
+<!--        </div>-->
+
+        <div class="col-lg-4 col-sm-12">
+            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
+                      id="llcInquiryText" (click)="click(12)">
+                <count [count]="nFvc" *ngIf="nFvc  != undefined"></count>
+                <div class="d-grid" style="justify-items: center;">
+                    <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
+
+                    <p class=" text-black">Fence Violations</p>
                 </div>
             </mat-card>
         </div>
@@ -86,28 +98,19 @@
 
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
-                <count [count]="nDc" *ngIf="nDc  != undefined"></count>
-                <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_death_of_a_customer.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
-                    <p class=" text-black">Death of a Customer</p>
-                </div>
-            </mat-card>
-        </div>
-    </div>
-
-    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
-        <div class="col-lg-4 col-sm-12">
-            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
                       id="llcInquiryText" (click)="click(7)">
                 <count [count]="nCel" *ngIf="nCel  != undefined"></count>
                 <div class="d-grid" style="justify-items: center;">
                     <img src="../../../../assets/images/ic_cnic_expiry.png" class="img-responsive center-block w-12 mx-auto mb-3"
-                    alt="icon"/>
+                         alt="icon"/>
                     <p class=" text-black">Cnic Expiry of Loaner</p>
                 </div>
             </mat-card>
         </div>
+
+    </div>
+
+    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
 
         <div class="col-lg-4 col-sm-12">
             <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
@@ -146,33 +149,21 @@
         </div>
     </div>
 
-    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">
+<!--    <div class="col-lg-12 row ml-1  mt-2 justify-content-center text-center bg-gray-50  py-4">-->
 
-        <div class="col-lg-4 col-sm-12">
-            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText">
-                <count [count]="nLDef" *ngIf="nLDef  != undefined"></count>
-                <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
-                    <p class=" text-black">Intimate the Loaner via Text</p>
-                    <!--                    <p class=" text-black">Loan Defaulters</p>-->
-                </div>
-            </mat-card>
-        </div>
+<!--        <div class="col-lg-4 col-sm-12">-->
+<!--            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"-->
+<!--                      id="llcInquiryText">-->
+<!--                <count [count]="nLDef" *ngIf="nLDef  != undefined"></count>-->
+<!--                <div class="d-grid" style="justify-items: center;">-->
+<!--                    <img src="../../../../assets/images/ic_text_msg.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>-->
+<!--                    <p class=" text-black">Intimate the Loaner via Text</p>-->
+<!--                    &lt;!&ndash;                    <p class=" text-black">Loan Defaulters</p>&ndash;&gt;-->
+<!--                </div>-->
+<!--            </mat-card>-->
+<!--        </div>-->
 
-        <div class="col-lg-4 col-sm-12">
-            <mat-card class="cursor-pointer mx-4 d-flex justify-content-center items-center font-bold text-lg"
-                      id="llcInquiryText" (click)="click(12)">
-                <count [count]="nFvc" *ngIf="nFvc  != undefined"></count>
-                <div class="d-grid" style="justify-items: center;">
-                    <img src="../../../../assets/images/ic_loan_defaulters.PNG" class="img-responsive center-block w-12 mx-auto mb-3" alt="icon"/>
-
-                    <p class=" text-black">Fence Violations</p>
-                </div>
-            </mat-card>
-        </div>
-
-    </div>
+<!--    </div>-->
 
 </div>
 
